// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component The Rendered HTML should have a label 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Checkbox Label
    <input
      type="checkbox"
      value=""
    />
  </label>
</div>
`;

exports[`Checkbox component should have checked attribute 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Checkbox Label
    <input
      checked=""
      type="checkbox"
      value="TheValue"
    />
  </label>
</div>
`;

exports[`Checkbox component should not have checked attribute 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Checkbox Label
    <input
      type="checkbox"
      value="The Value"
    />
  </label>
</div>
`;

exports[`Checkbox component should not have checked attribute 2`] = `
<input
  type="checkbox"
  value="The Value"
/>
`;

exports[`handling input should set a value when passed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      checked=""
      type="checkbox"
      value="The Value"
    />
  </label>
</div>
`;

exports[`handling input should update a value when changed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      type="checkbox"
      value="The Value"
    />
  </label>
</div>
`;
